# IPTV-Player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.cpp  a.h
src/gstreamer/: gstreamermanager.cpp  gstreamermanager.h
src/gui/: channelselectiondialog.cpp  channelselectiondialog.h  iptvplayer.cpp  iptvplayer.h  iptvplayer.ui
utils/: main.cpp
